@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: Em4EventAction.cc,v 1.5 2001-02-20 16:08:36 maire Exp $
+// $Id: Em4EventAction.cc,v 1.6 2001-02-21 10:14:39 maire Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -26,6 +26,10 @@
 #include "G4ios.hh"
 #include "G4UnitsTable.hh"
 #include "Randomize.hh"
+
+#ifndef G4NOHIST
+  #include "CLHEP/Hist/HBookFile.h"
+#endif
 
 //....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo....
 
@@ -70,6 +74,10 @@ void Em4EventAction::EndOfEventAction( const G4Event* evt)
   if (drawFlag != "none") 
     G4cout << " Energy deposit: " 
            << G4BestUnit(TotalEnergyDeposit,"Energy") << G4endl;
+	   
+#ifndef G4NOHIST
+  Em4Run->GetHisto(0)->accumulate(TotalEnergyDeposit/MeV);
+#endif
 	   
   G4VVisManager* pVVisManager = G4VVisManager::GetConcreteInstance();
 
